rs_src/bindings.rs

#[test]
fn bindgen_test_layout_rt_semaphore() {
    const UNINIT: ::core::mem::MaybeUninit<rt_semaphore> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_semaphore>(),
        32usize,
        concat!("Size of: ", stringify!(rt_semaphore))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_semaphore>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_semaphore))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_semaphore),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).value) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_semaphore),
            "::",
            stringify!(value)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).reserved) as usize - ptr as usize },
        30usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_semaphore),
            "::",
            stringify!(reserved)
        )
    );
}
pub type rt_sem_t = *mut rt_semaphore;
#[doc = " Mutual exclusion (mutex) structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_mutex {
    #[doc = "< inherit from ipc_object"]
    pub parent: rt_ipc_object,
    #[doc = "< the priority ceiling of mutexe"]
    pub ceiling_priority: rt_uint8_t,
    #[doc = "< the maximal priority for pending thread"]
    pub priority: rt_uint8_t,
    #[doc = "< numbers of thread hold the mutex"]
    pub hold: rt_uint8_t,
    #[doc = "< reserved field"]
    pub reserved: rt_uint8_t,
    #[doc = "< current owner of mutex"]
    pub owner: *mut rt_thread,
    #[doc = "< the object list taken by thread"]
    pub taken_list: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_mutex() {
    const UNINIT: ::core::mem::MaybeUninit<rt_mutex> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_mutex>(),
        44usize,
        concat!("Size of: ", stringify!(rt_mutex))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_mutex>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_mutex))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ceiling_priority) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(ceiling_priority)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).priority) as usize - ptr as usize },
        29usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(priority)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).hold) as usize - ptr as usize },
        30usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(hold)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).reserved) as usize - ptr as usize },
        31usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(reserved)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).owner) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(owner)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).taken_list) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(taken_list)
        )
    );
}
pub type rt_mutex_t = *mut rt_mutex;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_event {
    #[doc = "< inherit from ipc_object"]
    pub parent: rt_ipc_object,
    #[doc = "< event set"]
    pub set: rt_uint32_t,
}
#[test]
fn bindgen_test_layout_rt_event() {
    const UNINIT: ::core::mem::MaybeUninit<rt_event> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_event>(),
        32usize,
        concat!("Size of: ", stringify!(rt_event))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_event>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_event))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_event),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).set) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_event),
            "::",
            stringify!(set)
        )
    );
}
pub type rt_event_t = *mut rt_event;
#[doc = " mailbox structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_mailbox {
    #[doc = "< inherit from ipc_object"]
    pub parent: rt_ipc_object,
    #[doc = "< start address of message buffer"]
    pub msg_pool: *mut rt_ubase_t,
    #[doc = "< size of message pool"]
    pub size: rt_uint16_t,
    #[doc = "< index of messages in msg_pool"]
    pub entry: rt_uint16_t,
    #[doc = "< input offset of the message buffer"]
    pub in_offset: rt_uint16_t,
    #[doc = "< output offset of the message buffer"]
    pub out_offset: rt_uint16_t,
    #[doc = "< sender thread suspended on this mailbox"]
    pub suspend_sender_thread: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_mailbox() {
    const UNINIT: ::core::mem::MaybeUninit<rt_mailbox> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_mailbox>(),
        48usize,
        concat!("Size of: ", stringify!(rt_mailbox))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_mailbox>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_mailbox))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_pool) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(msg_pool)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        34usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).in_offset) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(in_offset)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).out_offset) as usize - ptr as usize },
        38usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(out_offset)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).suspend_sender_thread) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(suspend_sender_thread)
        )
    );
}
pub type rt_mailbox_t = *mut rt_mailbox;
#[doc = " message queue structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_messagequeue {
    #[doc = "< inherit from ipc_object"]
    pub parent: rt_ipc_object,
    #[doc = "< start address of message queue"]
    pub msg_pool: *mut core::ffi::c_void,
    #[doc = "< message size of each message"]
    pub msg_size: rt_uint16_t,
    #[doc = "< max number of messages"]
    pub max_msgs: rt_uint16_t,
    #[doc = "< index of messages in the queue"]
    pub entry: rt_uint16_t,
    #[doc = "< list head"]
    pub msg_queue_head: *mut core::ffi::c_void,
    #[doc = "< list tail"]
    pub msg_queue_tail: *mut core::ffi::c_void,
    #[doc = "< pointer indicated the free node of queue"]
    pub msg_queue_free: *mut core::ffi::c_void,
    #[doc = "< sender thread suspended on this message queue"]
    pub suspend_sender_thread: rt_list_t,
}
